--- a/trillium/build.yaml
+++ b/trillium/build.yaml
@@ -1,6 +1,6 @@
 # build.yaml
 build_from:
-  amd64: docker.io/triliumnext/notes:v0.96.0
-  aarch64: docker.io/triliumnext/notes:v0.96.0
+  amd64: docker.io/triliumnext/trilium:v0.96.0
+  aarch64: docker.io/triliumnext/trilium:v0.96.0
 args:
   BUILD_ARCH: "${BUILD_ARCH}"
