--- a/trillium/config.yaml
+++ b/trillium/config.yaml
@@ -26,11 +26,17 @@ options:
   timezone: "Europe/Berlin"
   log_level: "info"
   https_only: false
+  trilium_oauth_base_url: ""
+  trilium_oauth_client_id: ""
+  trilium_oauth_client_secret: ""
 schema:
   timezone: |
     list(Europe/Berlin|America/New_York|UTC|Asia/Berlin|Europe/London|Asia/Tokyo|Australia/Sydney)
   log_level: "list(trace|debug|info|notice|warning|error|fatal)"
   https_only: "bool"
+  trilium_oauth_base_url: "str?"
+  trilium_oauth_client_id: "str?"
+  trilium_oauth_client_secret: "str?"
 environment:
   TRILIUM_DATA_DIR: "/data/trilium-data"  # Use /data for persistent data storage
   USER_UID: "1000"
@@ -41,9 +47,9 @@ environment:
   NODE_ENV: "production"
   HOST: "0.0.0.0"
   TRILIUM_LOG_LEVEL: "{{ options.log_level }}"
-  TRILIUM_OAUTH_BASE_URL: ""  # You can set this via env var
-  TRILIUM_OAUTH_CLIENT_ID: ""  # You can set this via env var
-  TRILIUM_OAUTH_CLIENT_SECRET: ""  # You can set this via env var
+  TRILIUM_OAUTH_BASE_URL: "{{ options.trilium_oauth_base_url }}"
+  TRILIUM_OAUTH_CLIENT_ID: "{{ options.trilium_oauth_client_id }}"
+  TRILIUM_OAUTH_CLIENT_SECRET: "{{ options.trilium_oauth_client_secret }}"
 
 # You can also set up through environment variables:
 # TRILIUM_OAUTH_BASE_URL, TRILIUM_OAUTH_CLIENT_ID, and TRILIUM_OAUTH_CLIENT_SECRET
